--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^16.9.0",
     "react-json-editor-ajrm": "^2.5.9",
     "react-router-dom": "^5.0.1",
+    "react-time-ago": "^5.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
